examples/fail/parser/bad_struct_field.bina
// EXPECT_PARSER_ERROR: expected ';' after struct field
struct Point {
    x: int32
}

fn main() -> int {
    return 0;
}
